// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default Render 1`] = `
<div
  className="points-section"
>
  <div
    className="points"
  >
    <div
      className="point-name"
    >
      Ecency Points
    </div>
    <div
      className="points-val"
    >
      <div
        className="val"
      >
        12.010
         POINTS
      </div>
    </div>
    <div
      className="clearfix"
    />
  </div>
  <div
    className="point-reward-types"
  >
    <div
      className="point-reward-type"
      title="You can earn point by posting regularly. Posting gives you 15 points."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        15
      </span>
    </div>
    <div
      className="point-reward-type"
      title="Each comment you make helps you to grow your audience and make friendship but also earns you 5 points."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        5
      </span>
    </div>
    <div
      className="point-reward-type"
      title="By voting you give reward to other creators and show your appreciation but also earn 0.01 x vote weight points."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        0.3
      </span>
    </div>
    <div
      className="point-reward-type"
      title="  Share what post you like with your friends and earn 1 points."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        1
      </span>
    </div>
    <div
      className="point-reward-type"
      title="Checking in on Ecency gives you 0.25 points and helps you stay connected with your friends."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        0.25
      </span>
    </div>
    <div
      className="point-reward-type"
      title="When you login into Ecency you are entitled to earn 100 points automatically."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,6A2,2 0 0,0 10,8A2,2 0 0,0 12,10A2,2 0 0,0 14,8A2,2 0 0,0 12,6M12,13C14.67,13 20,14.33 20,17V20H4V17C4,14.33 9.33,13 12,13M12,14.9C9.03,14.9 5.9,16.36 5.9,17V18.1H18.1V17C18.1,16.36 14.97,14.9 12,14.9Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        99+
      </span>
    </div>
    <div
      className="point-reward-type"
      title="Consistent use of app gives you extra chances to earn more 10 points, be more active and earn more."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M0.41,13.41L6,19L7.41,17.58L1.83,12M22.24,5.58L11.66,16.17L7.5,12L6.07,13.41L11.66,19L23.66,7M18,7L16.59,5.58L10.24,11.93L11.66,13.34L18,7Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        10
      </span>
    </div>
    <div
      className="point-reward-type"
      title="You can earn 1 point per day for each 100SP delegation."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M15.58,16.8L12,14.5L8.42,16.8L9.5,12.68L6.21,10L10.46,9.74L12,5.8L13.54,9.74L17.79,10L14.5,12.68M20,12C20,10.89 20.9,10 22,10V6C22,4.89 21.1,4 20,4H4A2,2 0 0,0 2,6V10C3.11,10 4,10.9 4,12A2,2 0 0,1 2,14V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V14A2,2 0 0,1 20,12Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        1
      </span>
    </div>
  </div>
  <div
    className="p-transaction-list"
  >
    <div
      className="transaction-list-header"
    >
      <h2>
        History
      </h2>
    </div>
    <div
      className="transaction-list-body"
    >
      <div
        className="transaction-list-item"
      >
        <div
          className="transaction-icon"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="transaction-title"
        >
          <div
            className="transaction-name"
          >
            Points for heartbeat
          </div>
          <div
            className="transaction-date"
          >
            5 days ago
          </div>
        </div>
        <div
          className="transaction-numbers"
        >
          0.250
        </div>
      </div>
      <div
        className="transaction-list-item"
      >
        <div
          className="transaction-icon"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="transaction-title"
        >
          <div
            className="transaction-name"
          >
            Points for vote
          </div>
          <div
            className="transaction-date"
          >
            5 days ago
          </div>
        </div>
        <div
          className="transaction-numbers"
        >
          0.750
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(2) With active user 1`] = `
<div
  className="points-section"
>
  <div
    className="points"
  >
    <div
      className="point-name"
    >
      Ecency Points
    </div>
    <div
      className="points-val"
    >
      <div
        className="val"
      >
        12.010
         POINTS
      </div>
      <div
        className="custom-dropdown float-right"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="dropdown-btn "
        >
          <div
            className="label"
          >
            
          </div>
          <div
            className="menu-down"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="clearfix"
    />
    <div
      className="unclaimed can-claim"
    >
      <div
        className="val"
      >
        <div
          className="val"
        >
          GET POINTS
        </div>
      </div>
      <a
        className="claim-btn "
        href="#"
        onClick={[Function]}
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M17,13H13V17H11V13H7V11H11V7H13V11H17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    className="point-reward-types"
  >
    <div
      className="point-reward-type"
      title="You can earn point by posting regularly. Posting gives you 15 points."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        15
      </span>
    </div>
    <div
      className="point-reward-type"
      title="Each comment you make helps you to grow your audience and make friendship but also earns you 5 points."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        5
      </span>
    </div>
    <div
      className="point-reward-type"
      title="By voting you give reward to other creators and show your appreciation but also earn 0.01 x vote weight points."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        0.3
      </span>
    </div>
    <div
      className="point-reward-type"
      title="  Share what post you like with your friends and earn 1 points."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        1
      </span>
    </div>
    <div
      className="point-reward-type"
      title="Checking in on Ecency gives you 0.25 points and helps you stay connected with your friends."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        0.25
      </span>
    </div>
    <div
      className="point-reward-type"
      title="When you login into Ecency you are entitled to earn 100 points automatically."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,6A2,2 0 0,0 10,8A2,2 0 0,0 12,10A2,2 0 0,0 14,8A2,2 0 0,0 12,6M12,13C14.67,13 20,14.33 20,17V20H4V17C4,14.33 9.33,13 12,13M12,14.9C9.03,14.9 5.9,16.36 5.9,17V18.1H18.1V17C18.1,16.36 14.97,14.9 12,14.9Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        99+
      </span>
    </div>
    <div
      className="point-reward-type"
      title="Consistent use of app gives you extra chances to earn more 10 points, be more active and earn more."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M0.41,13.41L6,19L7.41,17.58L1.83,12M22.24,5.58L11.66,16.17L7.5,12L6.07,13.41L11.66,19L23.66,7M18,7L16.59,5.58L10.24,11.93L11.66,13.34L18,7Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        10
      </span>
    </div>
    <div
      className="point-reward-type"
      title="You can earn 1 point per day for each 100SP delegation."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M15.58,16.8L12,14.5L8.42,16.8L9.5,12.68L6.21,10L10.46,9.74L12,5.8L13.54,9.74L17.79,10L14.5,12.68M20,12C20,10.89 20.9,10 22,10V6C22,4.89 21.1,4 20,4H4A2,2 0 0,0 2,6V10C3.11,10 4,10.9 4,12A2,2 0 0,1 2,14V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V14A2,2 0 0,1 20,12Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        1
      </span>
    </div>
  </div>
  <div
    className="p-transaction-list"
  >
    <div
      className="transaction-list-header"
    >
      <h2>
        History
      </h2>
    </div>
    <div
      className="transaction-list-body"
    >
      <div
        className="transaction-list-item"
      >
        <div
          className="transaction-icon"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="transaction-title"
        >
          <div
            className="transaction-name"
          >
            Points for heartbeat
          </div>
          <div
            className="transaction-date"
          >
            5 days ago
          </div>
        </div>
        <div
          className="transaction-numbers"
        >
          0.250
        </div>
      </div>
      <div
        className="transaction-list-item"
      >
        <div
          className="transaction-icon"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="transaction-title"
        >
          <div
            className="transaction-name"
          >
            Points for vote
          </div>
          <div
            className="transaction-date"
          >
            5 days ago
          </div>
        </div>
        <div
          className="transaction-numbers"
        >
          0.750
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(3) Active user with unclaimed points 1`] = `
<div
  className="points-section"
>
  <div
    className="points"
  >
    <div
      className="point-name"
    >
      Ecency Points
    </div>
    <div
      className="points-val"
    >
      <div
        className="val"
      >
        12.010
         POINTS
      </div>
      <div
        className="custom-dropdown float-right"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="dropdown-btn "
        >
          <div
            className="label"
          >
            
          </div>
          <div
            className="menu-down"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="clearfix"
    />
    <div
      className="unclaimed can-claim"
    >
      <div
        className="val"
      >
        <div
          className="val"
        >
          6.200
        </div>
      </div>
      <a
        className="claim-btn "
        href="#"
        onClick={[Function]}
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M17,13H13V17H11V13H7V11H11V7H13V11H17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
    <div
      className="clearfix"
    />
    <div
      className="get-estm"
    >
      <a
        href="#"
        onClick={[Function]}
      >
        GET POINTS
      </a>
    </div>
  </div>
  <div
    className="point-reward-types"
  >
    <div
      className="point-reward-type"
      title="You can earn point by posting regularly. Posting gives you 15 points."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        15
      </span>
    </div>
    <div
      className="point-reward-type"
      title="Each comment you make helps you to grow your audience and make friendship but also earns you 5 points."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        5
      </span>
    </div>
    <div
      className="point-reward-type"
      title="By voting you give reward to other creators and show your appreciation but also earn 0.01 x vote weight points."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        0.3
      </span>
    </div>
    <div
      className="point-reward-type"
      title="  Share what post you like with your friends and earn 1 points."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        1
      </span>
    </div>
    <div
      className="point-reward-type"
      title="Checking in on Ecency gives you 0.25 points and helps you stay connected with your friends."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        0.25
      </span>
    </div>
    <div
      className="point-reward-type"
      title="When you login into Ecency you are entitled to earn 100 points automatically."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,6A2,2 0 0,0 10,8A2,2 0 0,0 12,10A2,2 0 0,0 14,8A2,2 0 0,0 12,6M12,13C14.67,13 20,14.33 20,17V20H4V17C4,14.33 9.33,13 12,13M12,14.9C9.03,14.9 5.9,16.36 5.9,17V18.1H18.1V17C18.1,16.36 14.97,14.9 12,14.9Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        99+
      </span>
    </div>
    <div
      className="point-reward-type"
      title="Consistent use of app gives you extra chances to earn more 10 points, be more active and earn more."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M0.41,13.41L6,19L7.41,17.58L1.83,12M22.24,5.58L11.66,16.17L7.5,12L6.07,13.41L11.66,19L23.66,7M18,7L16.59,5.58L10.24,11.93L11.66,13.34L18,7Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        10
      </span>
    </div>
    <div
      className="point-reward-type"
      title="You can earn 1 point per day for each 100SP delegation."
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M15.58,16.8L12,14.5L8.42,16.8L9.5,12.68L6.21,10L10.46,9.74L12,5.8L13.54,9.74L17.79,10L14.5,12.68M20,12C20,10.89 20.9,10 22,10V6C22,4.89 21.1,4 20,4H4A2,2 0 0,0 2,6V10C3.11,10 4,10.9 4,12A2,2 0 0,1 2,14V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V14A2,2 0 0,1 20,12Z"
          fill="currentColor"
        />
      </svg>
      <span
        className="reward-num"
      >
        1
      </span>
    </div>
  </div>
  <div
    className="p-transaction-list"
  >
    <div
      className="transaction-list-header"
    >
      <h2>
        History
      </h2>
    </div>
    <div
      className="transaction-list-body"
    >
      <div
        className="transaction-list-item"
      >
        <div
          className="transaction-icon"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="transaction-title"
        >
          <div
            className="transaction-name"
          >
            Points for heartbeat
          </div>
          <div
            className="transaction-date"
          >
            5 days ago
          </div>
        </div>
        <div
          className="transaction-numbers"
        >
          0.250
        </div>
      </div>
      <div
        className="transaction-list-item"
      >
        <div
          className="transaction-icon"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="transaction-title"
        >
          <div
            className="transaction-name"
          >
            Points for vote
          </div>
          <div
            className="transaction-date"
          >
            5 days ago
          </div>
        </div>
        <div
          className="transaction-numbers"
        >
          0.750
        </div>
      </div>
    </div>
  </div>
</div>
`;
